# django-social-network

./: .gitignore  Dockerfile
app/: .env.example  Dockerfile  db.sqlite3  docker-compose.yaml  example.env  pyproject.toml
app/articles/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
app/articles/migrations/: 0001_initial.py  0002_alter_article_image.py  0003_article_is_visible.py  0004_article_view_count.py  0005_article_created_at.py  (+9 more)
app/chat/: admin.py  apps.py  consumers.py  models.py  permissions.py  routing.py  serializers.py  signals.py  urls.py  utils.py  views.py
app/core/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  validators.py  views.py
app/fixtures/: bussines.json  industries.json  interests.json  regions.json  users.json
app/image/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py
app/main/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/network/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  views.py
app/offer/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
app/profiles/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/templates/: letter-code.html  reset password.html
app/vacancy/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
(+187 files in other folders)
