[tool.poetry]
name = "dao-back"
version = "0.1.0"
description = ""
authors = ["alexeygalt <alexeygalt@gmail.com>"]
readme = "README.md"
#packages = [{include = "dao_back"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.2"
pre-commit = "^3.2.2"
django-environ = "^0.10.0"
django-phonenumber-field = "^7.0.2"
django-versatileimagefield = "^3.0"
drf-flex-fields = "^1.0.2"
phonenumbers = "^8.13.10"
psycopg2-binary = "^2.9.6"
django-cors-headers = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
django-filter = "^23.2"
django-extensions = "^3.2.1"
celery = "^5.2.7"
redis = "^4.5.5"
django-cleanup = "^7.0.0"
flower = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
